crates/rstest-bdd-macros/tests/fixtures/step_nested_pattern.stderr
error: invalid step function signature: unsupported parameter pattern; use a simple identifier (e.g., `arg: T`). Hint: use `#[given] fn name(ctx: &StepContext, ... )` and valid fixtures.
  --> tests/fixtures/step_nested_pattern.rs:11:16
   |
11 | fn step_nested(User { coords: (x, y) }: User) {}
   |                ^^^^^^^^^^^^^^^^^^^^^^^
